--- a/app/src/main/res/layout/item_rank_react.xml
+++ b/app/src/main/res/layout/item_rank_react.xml
@@ -7,52 +7,65 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="5dp">
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tvName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:textSize="18sp" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imvAvatar"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:padding="10dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imvHeart"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:src="@drawable/heart" />
+            android:orientation="vertical"
+            android:padding="5dp">
 
             <TextView
-                android:id="@+id/tvHeart"
+                android:id="@+id/tvName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="10dp"
-                android:text="10" />
+                android:text="@string/app_name"
+                android:textSize="18sp" />
 
-            <ImageView
-                android:id="@+id/imvAngry"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:layout_marginStart="10dp"
-                android:src="@drawable/angry" />
-
-            <TextView
-                android:id="@+id/tvAngry"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="10dp"
-                android:text="10" />
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imvHeart"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/heart" />
+
+                <TextView
+                    android:id="@+id/tvHeart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:text="10" />
+
+                <ImageView
+                    android:id="@+id/imvAngry"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:src="@drawable/angry" />
+
+                <TextView
+                    android:id="@+id/tvAngry"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:text="10" />
+            </LinearLayout>
         </LinearLayout>
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
