--- a/app/src/main/res/layout/item_game.xml
+++ b/app/src/main/res/layout/item_game.xml
@@ -13,7 +13,7 @@
         android:padding="5dp">
 
         <ImageView
-            android:id="@+id/imvAvatar"
+            android:id="@+id/imvIcon"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:padding="10dp"
