--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/icon"
         android:layout_centerInParent="true"/>
 
     <ProgressBar
